expected/main/core/structs/structs10a.err
ERROR: "actual/main/core/structs/structs10a.lc", line 2
struct PageTable/4K [ ptes :: Array 1K (Stored PTE) ]
^
Sum of component widths is 4096 more than expected total

ERROR: Aborting after previously reported error

